# lostdogs

./: .dockerignore  .envrc  .envrc.example  .gitignore  AGENTS.md  Dockerfile  Justfile  README.md  compose.yml  config.yml  db.go  deploy.env.example  domain.go  domain_impl.md  domain_test.go  duplicates_impl.md  go.mod  go.sum  llm_duplicates_dd.md  main.go  pyproject.toml  sqlc.yaml  tg_impl.md  vk_impl.md
ansible/: README.md  compose.yml  deploy.yml  inventory.example.ini  requirements.yml
ansible/group_vars/: lostdogs.yml.example
ansible/templates/: dotenv.j2
cmd/dump-wall/: main.go
cmd/lostdogs/: main.go  process_posts_test.go  telegram_wiring.go  vk_wiring.go
internal/db/: models.go  queries.sql.go  vk_outbox_ext.go
internal/ptr/: ptr.go
internal/telegram/: client.go  enqueue.go  formatter.go  worker.go
internal/types/: string_slice.go
internal/vk/: client.go  enqueue.go  formatter.go  worker.go
resources/db/: queries.sql  schema.sql
resources/db/migrations/: 20250903151109_00001_initial_schema.sql  20250904062110_00002_outbox_vk.sql
resources/fixtures/: wall_zoopoisk_18_100.json
script/: deploy.sh
